--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Add Icon -->
     <link rel="icon" href="./assests/images/feedback/fb.png">
     <!-- AOS -->
-<!--     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assests/css/style.css">
     <link rel="stylesheet" href="./assests/css/media.css">
